Migrate from deprecated Number constructors (new Integer(), new Double(), new Long(), etc.) to factory methods (Integer.valueOf(), etc.)